--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vue-telegram-login": "^2.1.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
