--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "maska": "^2.1.11",
+    "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
