--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.79",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "maska": "^2.1.11",
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
+    "vue3-google-map": "^0.19.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
