--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL="https://api.ildam.uz/cli"
+VITE_BASE_URL=https://api.ildam.uz/cli
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyAWvaPB0kX0dkUskWVZca-A3U5g8kAV1_s
