--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+.env
 .DS_Store
 dist
 dist-ssr
@@ -28,3 +29,4 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
